@@ -4,6 +4,10 @@ Changelog
 1.0b4 (unreleased)
 ------------------
 
+* Fix #662654: As an administrator, I can configure a Collection to show recent comments.
+  Comment.Type() now correctly returns the FTI title ('Comment')
+  [chaoflow]
+
 * German translation updated.
   [juh]
   
